src/pthread.lisp

;;; This file was automatically generated by SWIG (http://www.swig.org).
;;; Version 3.0.3
;;;
;;; Do not make changes to this file unless you know what you are doing--modify
;;; the SWIG interface file instead.


;;;SWIG wrapper code starts here

(cl:defmacro defanonenum (cl:&body enums)
   "Converts anonymous enums to defconstants."
  `(cl:progn ,@(cl:loop for value in enums
                        for index = 0 then (cl:1+ index)
                        when (cl:listp value) do (cl:setf index (cl:second value)
                                                          value (cl:first value))
                        collect `(cl:defconstant ,value ,index))))

(cl:eval-when (:compile-toplevel :load-toplevel)
  (cl:unless (cl:fboundp 'swig-lispify)
    (cl:defun swig-lispify (name flag cl:&optional (package cl:*package*))
      (cl:labels ((helper (lst last rest cl:&aux (c (cl:car lst)))
                    (cl:cond
                      ((cl:null lst)
                       rest)
                      ((cl:upper-case-p c)
                       (helper (cl:cdr lst) 'upper
                               (cl:case last
                                 ((lower digit) (cl:list* c #\- rest))
                                 (cl:t (cl:cons c rest)))))
                      ((cl:lower-case-p c)
                       (helper (cl:cdr lst) 'lower (cl:cons (cl:char-upcase c) rest)))
                      ((cl:digit-char-p c)
                       (helper (cl:cdr lst) 'digit 
                               (cl:case last
                                 ((upper lower) (cl:list* c #\- rest))
                                 (cl:t (cl:cons c rest)))))
                      ((cl:char-equal c #\_)
                       (helper (cl:cdr lst) '_ (cl:cons #\- rest)))
                      (cl:t
                       (cl:error "Invalid character: ~A" c)))))
        (cl:let ((fix (cl:case flag
                        ((constant enumvalue) "+")
                        (variable "*")
                        (cl:t ""))))
          (cl:intern
           (cl:concatenate
            'cl:string
            fix
            (cl:nreverse (helper (cl:concatenate 'cl:list name) cl:nil cl:nil))
            fix)
           package))))))

;;;SWIG wrapper code ends here


(cffi:defcfun ("pthread_create" #.(swig-lispify "pthread_create" 'function)) :int
  (thread :pointer)
  (attr :pointer)
  (start_routine :pointer)
  (arg :pointer))

(cl:export '#.(swig-lispify "pthread_create" 'function))

(cffi:defcfun ("pthread_cancel" #.(swig-lispify "pthread_cancel" 'function)) :int
  (thread :pthread))

(cl:export '#.(swig-lispify "pthread_cancel" 'function))

(cffi:defcfun ("pthread_detach" #.(swig-lispify "pthread_detach" 'function)) :int
  (thread :pthread))

(cl:export '#.(swig-lispify "pthread_detach" 'function))

(cffi:defcfun ("pthread_equal" #.(swig-lispify "pthread_equal" 'function)) :int
  (t1 :pthread)
  (t2 :pthread))

(cl:export '#.(swig-lispify "pthread_equal" 'function))

(cffi:defcfun ("pthread_exit" #.(swig-lispify "pthread_exit" 'function)) :void
  (value_ptr :pointer))

(cl:export '#.(swig-lispify "pthread_exit" 'function))

(cffi:defcfun ("pthread_join" #.(swig-lispify "pthread_join" 'function)) :int
  (thread :pthread)
  (value_ptr :pointer))

(cl:export '#.(swig-lispify "pthread_join" 'function))

(cffi:defcfun ("pthread_kill" #.(swig-lispify "pthread_kill" 'function)) :int
  (thread :pthread)
  (sig :int))

(cl:export '#.(swig-lispify "pthread_kill" 'function))

(cffi:defcfun ("pthread_once" #.(swig-lispify "pthread_once" 'function)) :int
  (once_control :pointer)
  (init_routine :pointer))

(cl:export '#.(swig-lispify "pthread_once" 'function))

(cffi:defcfun ("pthread_self" #.(swig-lispify "pthread_self" 'function)) :pthread)

(cl:export '#.(swig-lispify "pthread_self" 'function))

(cffi:defcfun ("pthread_setcancelstate" #.(swig-lispify "pthread_setcancelstate" 'function)) :int
  (state :int)
  (oldstate :pointer))

(cl:export '#.(swig-lispify "pthread_setcancelstate" 'function))

(cffi:defcfun ("pthread_setcanceltype" #.(swig-lispify "pthread_setcanceltype" 'function)) :int
  (type :int)
  (oldtype :pointer))

(cl:export '#.(swig-lispify "pthread_setcanceltype" 'function))

(cffi:defcfun ("pthread_testcancel" #.(swig-lispify "pthread_testcancel" 'function)) :void)

(cl:export '#.(swig-lispify "pthread_testcancel" 'function))

(cffi:defcfun ("pthread_yield" #.(swig-lispify "pthread_yield" 'function)) :void)

(cl:export '#.(swig-lispify "pthread_yield" 'function))

(cffi:defcfun ("pthread_attr_destroy" #.(swig-lispify "pthread_attr_destroy" 'function)) :int
  (attr :pointer))

(cl:export '#.(swig-lispify "pthread_attr_destroy" 'function))

(cffi:defcfun ("pthread_attr_getinheritsched" #.(swig-lispify "pthread_attr_getinheritsched" 'function)) :int
  (attr :pointer)
  (inheritsched :pointer))

(cl:export '#.(swig-lispify "pthread_attr_getinheritsched" 'function))

(cffi:defcfun ("pthread_attr_getschedparam" #.(swig-lispify "pthread_attr_getschedparam" 'function)) :int
  (attr :pointer)
  (param :pointer))

(cl:export '#.(swig-lispify "pthread_attr_getschedparam" 'function))

(cffi:defcfun ("pthread_attr_getschedpolicy" #.(swig-lispify "pthread_attr_getschedpolicy" 'function)) :int
  (attr :pointer)
  (policy :pointer))

(cl:export '#.(swig-lispify "pthread_attr_getschedpolicy" 'function))

(cffi:defcfun ("pthread_attr_getscope" #.(swig-lispify "pthread_attr_getscope" 'function)) :int
  (attr :pointer)
  (contentionscope :pointer))

(cl:export '#.(swig-lispify "pthread_attr_getscope" 'function))

(cffi:defcfun ("pthread_attr_getstacksize" #.(swig-lispify "pthread_attr_getstacksize" 'function)) :int
  (attr :pointer)
  (stacksize :pointer))

(cl:export '#.(swig-lispify "pthread_attr_getstacksize" 'function))

(cffi:defcfun ("pthread_attr_getstackaddr" #.(swig-lispify "pthread_attr_getstackaddr" 'function)) :int
  (attr :pointer)
  (stackaddr :pointer))

(cl:export '#.(swig-lispify "pthread_attr_getstackaddr" 'function))

(cffi:defcfun ("pthread_attr_getdetachstate" #.(swig-lispify "pthread_attr_getdetachstate" 'function)) :int
  (attr :pointer)
  (detachstate :pointer))

(cl:export '#.(swig-lispify "pthread_attr_getdetachstate" 'function))

(cffi:defcfun ("pthread_attr_init" #.(swig-lispify "pthread_attr_init" 'function)) :int
  (attr :pointer))

(cl:export '#.(swig-lispify "pthread_attr_init" 'function))

(cffi:defcfun ("pthread_attr_setinheritsched" #.(swig-lispify "pthread_attr_setinheritsched" 'function)) :int
  (attr :pointer)
  (inheritsched :int))

(cl:export '#.(swig-lispify "pthread_attr_setinheritsched" 'function))

(cffi:defcfun ("pthread_attr_setschedparam" #.(swig-lispify "pthread_attr_setschedparam" 'function)) :int
  (attr :pointer)
  (param :pointer))

(cl:export '#.(swig-lispify "pthread_attr_setschedparam" 'function))

(cffi:defcfun ("pthread_attr_setschedpolicy" #.(swig-lispify "pthread_attr_setschedpolicy" 'function)) :int
  (attr :pointer)
  (policy :int))

(cl:export '#.(swig-lispify "pthread_attr_setschedpolicy" 'function))

(cffi:defcfun ("pthread_attr_setscope" #.(swig-lispify "pthread_attr_setscope" 'function)) :int
  (attr :pointer)
  (contentionscope :int))

(cl:export '#.(swig-lispify "pthread_attr_setscope" 'function))

(cffi:defcfun ("pthread_attr_setstacksize" #.(swig-lispify "pthread_attr_setstacksize" 'function)) :int
  (attr :pointer)
  (stacksize :pointer))

(cl:export '#.(swig-lispify "pthread_attr_setstacksize" 'function))

(cffi:defcfun ("pthread_attr_setstackaddr" #.(swig-lispify "pthread_attr_setstackaddr" 'function)) :int
  (attr :pointer)
  (stackaddr :pointer))

(cl:export '#.(swig-lispify "pthread_attr_setstackaddr" 'function))

(cffi:defcfun ("pthread_attr_setdetachstate" #.(swig-lispify "pthread_attr_setdetachstate" 'function)) :int
  (attr :pointer)
  (detachstate :int))

(cl:export '#.(swig-lispify "pthread_attr_setdetachstate" 'function))

(cffi:defcfun ("pthread_mutexattr_destroy" #.(swig-lispify "pthread_mutexattr_destroy" 'function)) :int
  (attr :pointer))

(cl:export '#.(swig-lispify "pthread_mutexattr_destroy" 'function))

(cffi:defcfun ("pthread_mutexattr_getprioceiling" #.(swig-lispify "pthread_mutexattr_getprioceiling" 'function)) :int
  (attr :pointer)
  (ceiling :pointer))

(cl:export '#.(swig-lispify "pthread_mutexattr_getprioceiling" 'function))

(cffi:defcfun ("pthread_mutexattr_getprotocol" #.(swig-lispify "pthread_mutexattr_getprotocol" 'function)) :int
  (attr :pointer)
  (protocol :pointer))

(cl:export '#.(swig-lispify "pthread_mutexattr_getprotocol" 'function))

(cffi:defcfun ("pthread_mutexattr_gettype" #.(swig-lispify "pthread_mutexattr_gettype" 'function)) :int
  (attr :pointer)
  (type :pointer))

(cl:export '#.(swig-lispify "pthread_mutexattr_gettype" 'function))

(cffi:defcfun ("pthread_mutexattr_init" #.(swig-lispify "pthread_mutexattr_init" 'function)) :int
  (attr :pointer))

(cl:export '#.(swig-lispify "pthread_mutexattr_init" 'function))

(cffi:defcfun ("pthread_mutexattr_setprioceiling" #.(swig-lispify "pthread_mutexattr_setprioceiling" 'function)) :int
  (attr :pointer)
  (ceiling :int))

(cl:export '#.(swig-lispify "pthread_mutexattr_setprioceiling" 'function))

(cffi:defcfun ("pthread_mutexattr_setprotocol" #.(swig-lispify "pthread_mutexattr_setprotocol" 'function)) :int
  (attr :pointer)
  (protocol :int))

(cl:export '#.(swig-lispify "pthread_mutexattr_setprotocol" 'function))

(cffi:defcfun ("pthread_mutexattr_settype" #.(swig-lispify "pthread_mutexattr_settype" 'function)) :int
  (attr :pointer)
  (type :int))

(cl:export '#.(swig-lispify "pthread_mutexattr_settype" 'function))

(cffi:defcfun ("pthread_mutex_destroy" #.(swig-lispify "pthread_mutex_destroy" 'function)) :int
  (mutex :pointer))

(cl:export '#.(swig-lispify "pthread_mutex_destroy" 'function))

(cffi:defcfun ("pthread_mutex_init" #.(swig-lispify "pthread_mutex_init" 'function)) :int
  (mutex :pointer)
  (attr :pointer))

(cl:export '#.(swig-lispify "pthread_mutex_init" 'function))

(cffi:defcfun ("pthread_mutex_lock" #.(swig-lispify "pthread_mutex_lock" 'function)) :int
  (mutex :pointer))

(cl:export '#.(swig-lispify "pthread_mutex_lock" 'function))

(cffi:defcfun ("pthread_mutex_trylock" #.(swig-lispify "pthread_mutex_trylock" 'function)) :int
  (mutex :pointer))

(cl:export '#.(swig-lispify "pthread_mutex_trylock" 'function))

(cffi:defcfun ("pthread_mutex_unlock" #.(swig-lispify "pthread_mutex_unlock" 'function)) :int
  (mutex :pointer))

(cl:export '#.(swig-lispify "pthread_mutex_unlock" 'function))

(cffi:defcfun ("pthread_condattr_destroy" #.(swig-lispify "pthread_condattr_destroy" 'function)) :int
  (attr :pointer))

(cl:export '#.(swig-lispify "pthread_condattr_destroy" 'function))

(cffi:defcfun ("pthread_condattr_init" #.(swig-lispify "pthread_condattr_init" 'function)) :int
  (attr :pointer))

(cl:export '#.(swig-lispify "pthread_condattr_init" 'function))

(cffi:defcfun ("pthread_cond_broadcast" #.(swig-lispify "pthread_cond_broadcast" 'function)) :int
  (cond :pointer))

(cl:export '#.(swig-lispify "pthread_cond_broadcast" 'function))

(cffi:defcfun ("pthread_cond_destroy" #.(swig-lispify "pthread_cond_destroy" 'function)) :int
  (cond :pointer))

(cl:export '#.(swig-lispify "pthread_cond_destroy" 'function))

(cffi:defcfun ("pthread_cond_init" #.(swig-lispify "pthread_cond_init" 'function)) :int
  (cond :pointer)
  (attr :pointer))

(cl:export '#.(swig-lispify "pthread_cond_init" 'function))

(cffi:defcfun ("pthread_cond_signal" #.(swig-lispify "pthread_cond_signal" 'function)) :int
  (cond :pointer))

(cl:export '#.(swig-lispify "pthread_cond_signal" 'function))

(cffi:defcfun ("pthread_cond_timedwait" #.(swig-lispify "pthread_cond_timedwait" 'function)) :int
  (cond :pointer)
  (mutex :pointer)
  (abstime :pointer))

(cl:export '#.(swig-lispify "pthread_cond_timedwait" 'function))

(cffi:defcfun ("pthread_cond_wait" #.(swig-lispify "pthread_cond_wait" 'function)) :int
  (arg0 :pointer)
  (mutex :pointer))

(cl:export '#.(swig-lispify "pthread_cond_wait" 'function))

(cffi:defcfun ("pthread_rwlock_destroy" #.(swig-lispify "pthread_rwlock_destroy" 'function)) :int
  (lock :pointer))

(cl:export '#.(swig-lispify "pthread_rwlock_destroy" 'function))

(cffi:defcfun ("pthread_rwlock_init" #.(swig-lispify "pthread_rwlock_init" 'function)) :int
  (lock :pointer)
  (attr :pointer))

(cl:export '#.(swig-lispify "pthread_rwlock_init" 'function))

(cffi:defcfun ("pthread_rwlock_rdlock" #.(swig-lispify "pthread_rwlock_rdlock" 'function)) :int
  (lock :pointer))

(cl:export '#.(swig-lispify "pthread_rwlock_rdlock" 'function))

(cffi:defcfun ("pthread_rwlock_tryrdlock" #.(swig-lispify "pthread_rwlock_tryrdlock" 'function)) :int
  (lock :pointer))

(cl:export '#.(swig-lispify "pthread_rwlock_tryrdlock" 'function))

(cffi:defcfun ("pthread_rwlock_trywrlock" #.(swig-lispify "pthread_rwlock_trywrlock" 'function)) :int
  (lock :pointer))

(cl:export '#.(swig-lispify "pthread_rwlock_trywrlock" 'function))

(cffi:defcfun ("pthread_rwlock_unlock" #.(swig-lispify "pthread_rwlock_unlock" 'function)) :int
  (lock :pointer))

(cl:export '#.(swig-lispify "pthread_rwlock_unlock" 'function))

(cffi:defcfun ("pthread_rwlock_wrlock" #.(swig-lispify "pthread_rwlock_wrlock" 'function)) :int
  (lock :pointer))

(cl:export '#.(swig-lispify "pthread_rwlock_wrlock" 'function))

(cffi:defcfun ("pthread_rwlockattr_destroy" #.(swig-lispify "pthread_rwlockattr_destroy" 'function)) :int
  (attr :pointer))

(cl:export '#.(swig-lispify "pthread_rwlockattr_destroy" 'function))

(cffi:defcfun ("pthread_rwlockattr_getpshared" #.(swig-lispify "pthread_rwlockattr_getpshared" 'function)) :int
  (attr :pointer)
  (pshared :pointer))

(cl:export '#.(swig-lispify "pthread_rwlockattr_getpshared" 'function))

(cffi:defcfun ("pthread_rwlockattr_init" #.(swig-lispify "pthread_rwlockattr_init" 'function)) :int
  (attr :pointer))

(cl:export '#.(swig-lispify "pthread_rwlockattr_init" 'function))

(cffi:defcfun ("pthread_rwlockattr_setpshared" #.(swig-lispify "pthread_rwlockattr_setpshared" 'function)) :int
  (attr :pointer)
  (pshared :int))

(cl:export '#.(swig-lispify "pthread_rwlockattr_setpshared" 'function))

(cffi:defcfun ("pthread_key_create" #.(swig-lispify "pthread_key_create" 'function)) :int
  (key :pointer)
  (routine :pointer))

(cl:export '#.(swig-lispify "pthread_key_create" 'function))

(cffi:defcfun ("pthread_key_delete" #.(swig-lispify "pthread_key_delete" 'function)) :int
  (key :pthread-key))

(cl:export '#.(swig-lispify "pthread_key_delete" 'function))

(cffi:defcfun ("pthread_getspecific" #.(swig-lispify "pthread_getspecific" 'function)) :pointer
  (key :pthread-key))

(cl:export '#.(swig-lispify "pthread_getspecific" 'function))

(cffi:defcfun ("pthread_setspecific" #.(swig-lispify "pthread_setspecific" 'function)) :int
  (key :pthread-key)
  (value_ptr :pointer))

(cl:export '#.(swig-lispify "pthread_setspecific" 'function))

(cffi:defcfun ("pthread_cleanup_pop" #.(swig-lispify "pthread_cleanup_pop" 'function)) :void
  (execute :int))

(cl:export '#.(swig-lispify "pthread_cleanup_pop" 'function))

(cffi:defcfun ("pthread_cleanup_push" #.(swig-lispify "pthread_cleanup_push" 'function)) :void
  (routine :pointer)
  (routine_arg :pointer))

(cl:export '#.(swig-lispify "pthread_cleanup_push" 'function))


